header spacing issue fixed

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -3,20 +3,20 @@
     padding: 0 !important;
 }
 
+.header-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--distance-6-25);
+    padding: 0 !important;
+    padding-bottom: var(--distance-25) !important;
+}
+
 @media (min-width: 768px) {
     .header-text-container {
         padding: 0 !important;
         padding-right: var(--distance-6-25) !important;
     }
 }
-
-.header-text-container {
-    display: flex;
-    flex-direction: column;
-    gap: var(--distance-6-25);
-    padding: 0 !important;
-}
-
 
 .container-fluid {
     display: flex;
